Enhance TransactionCreateForm to utilize useParams for locale management and update navigation path to transaction list. Correct Czech translation for 'Zadat výdej' to 'Zadat výdaj'.

--- a/src/translation/cs.yaml
+++ b/src/translation/cs.yaml
@@ -246,7 +246,7 @@ f3acc879f6d7a8558311e71269bf79ce74689eeba1dc71ee292dccdc:
     value: Seznam transakcí
 f4272751f3900e2ed4bebeff224bbf085162cf4266acf5f56a08e68e:
     ref: Output transaction
-    value: Zadat výdej
+    value: Zadat výdaj
 f562fa65e4d2b04bc91ab6addfc417d32f241c90c21d9194b84f311d:
     ref: Transaction amount
     value: Částka
