Refactor forms to use FormWrapper for improved UI consistency
- Replaced div containers in various forms (Inventory, MAC, and Transaction) with FormWrapper for better layout and styling.
- Added titles and hints to forms using the Tx component for localization support.
- Introduced FormWrapper component to standardize form presentation across the application.
- Updated translations for new form titles and hints in English and Czech.

--- a/src/translation/cs.yaml
+++ b/src/translation/cs.yaml
@@ -10,6 +10,9 @@
 1345bf9e64d99f8fa9a1cdb1067c859499aa7c04ef20ac9a94478b11:
     ref: Missing required token(s). (title)
     value: Chybí povinné token(y).
+15b88c18a36d16502bb701f9b870a0073d7efae28fc685c2199398ca:
+    ref: Create a new MAC (Monthly Account Calculation) entry
+    value: Vytvořte novou uzávěrku plovoucího průměru ceny
 1a1f737ddf071477184f4fe87e21c38c371f8edfc3bc013887265d59:
     ref: Todo list
     value: Todo list
